<resources>
    <string name="app_name">DAS_Mikel_Idoyaga</string>
    <string name="tvSesion">Iniciar Sesión</string>
    <string name="etUsuario">Usuario</string>
    <string name="epContraseña">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnIngles">Inglés</string>
    <string name="btnEspañol">Español</string>
    <string name="tvRegistrar">Todavía no te has registrado? Clicka aquí</string>
    <string name="btnAqui">Aquí</string>
    <string name="tvTextRegistrar">Registrarse</string>
    <string name="epContraseñaConfir">Confirmar Contraseña</string>
    <string name="btnRegistrar">Registrarse</string>
    <string name="btnCompartir">Compartir</string>
    <string name="btnInstrucciones">Instruciones</string>
    <string name="btnRendirse">Rendirse</string>
    <string name="tUsuarioOContraseñaMal">Usuario o contraseña incorrecta</string>
    <string name="tUsuarioCogido">Usuario ya esta cogido</string>
    <string name="tContraseñasDiferentes">Contraseñas diferentes</string>
    <string name="dInstrucciones">Clicka en los monstruos hasta derrotar a todos y asi salvar el destino de la humanidad. Y recuerda pase lo que pase nunca te rindas. P.D. Puedes compartir tu progreso con el boton COMPARTIR</string>
    <string name="sRojo">Rojo</string>
    <string name="sAzul">Azul</string>
    <string name="sBlanco">Blanco</string>
    <string name="btnGuardar">Guardar</string>
    <string name="dtColorFon">Color del fondo</string>
    <string name="suColorFon">Elige tu color para el fondo</string>
    <string name="tiColorFon">Color de fondo favorito</string>
    <string name="rendirse10">Rindete nunca lo conseguiras</string>
    <string name="notiRendir">Rendirse</string>
    <string name="tvPosicion">Posición</string>
    <string name="tvUsuario">Usuario</string>
    <string name="tvPunto">Puntuación</string>
    <string name="tvMuerte">Muerto</string>
    <string name="tvVictoria">Victoria</string>
    <string name="tFaltaUsuCon">Usuario o Contraseña vacio</string>




</resources>