<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imgMalo"
        android:layout_width="274dp"
        android:layout_height="272dp"
        android:layout_marginTop="84dp"
        android:onClick="onClicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:drawable/btn_star_big_on" />

    <Button
        android:id="@+id/btnRendirse"
        android:layout_width="253dp"
        android:layout_height="126dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#E60606"
        android:onClick="onRendirse"
        android:text="@string/btnRendirse"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartir" />

    <Button
        android:id="@+id/btnInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="36dp"
        android:onClick="onIns"
        android:text="@string/btnInstrucciones"
        app:layout_constraintBottom_toTopOf="@+id/btnRendirse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMalo"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:onClick="onComp"
        android:text="@string/btnCompartir"
        app:layout_constraintEnd_toStartOf="@+id/btnInstrucciones"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMalo" />

    <TextView
        android:id="@+id/tvCont"
        android:layout_width="201dp"
        android:layout_height="78dp"
        android:onClick="onClicker"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgMalo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:backgroundTint="#1E1D1D"
        android:onClick="onPref"
        app:layout_constraintBottom_toTopOf="@+id/tvCont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/tvMuerte"
        android:layout_width="330dp"
        android:layout_height="107dp"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />
</androidx.constraintlayout.widget.ConstraintLayout>